feat(home): colocando seta para abaixo para passar de slide nos tres primeiros modulos

--- a/src/app/pages/home/components/third-banner/third-banner.component.html
+++ b/src/app/pages/home/components/third-banner/third-banner.component.html
@@ -13,5 +13,6 @@
             <span class="subtitle-box">mas chegamos bem perto!</span>
         </h2>
         <img src="/assets/images/logo-santo-job-centralizado.png" class="logo-img" alt="logo santo job">
+        <fa-icon [icon]="icons['chevronDown']" class="arrow-down" (click)="goToNextSlide(3)"></fa-icon>
     </div>
 </div>
