--- a/src/app/pages/home/components/first-banner/first-banner.component.html
+++ b/src/app/pages/home/components/first-banner/first-banner.component.html
@@ -4,15 +4,16 @@
             <img src="/assets/images/logo-santo-job-centralizado.png" class="logo-img" alt="logo santo job">
         </h1>
         <div class="social-box">
-            <a href="https://www.facebook.com/"><img src="/assets/images/icons/facebook.png" class="social-icon"
+            <a href="https://www.facebook.com/santojobcomunicacao/" target="_blank"><img src="/assets/images/icons/facebook.png" class="social-icon"
                     alt="facebook"></a>
-            <a href="https://www.instagram.com/"><img src="/assets/images/icons/instagram.png" class="social-icon"
+            <a href="https://www.instagram.com/santojobcomunicacao/" target="_blank"><img src="/assets/images/icons/instagram.png" class="social-icon"
                     alt="instagram"></a>
-            <a href="https://www.linkedin.com/"><img src="/assets/images/icons/linkedin.png" class="social-icon"
+            <a href="https://www.linkedin.com/company/santojobcomunicacao/" target="_blank"><img src="/assets/images/icons/linkedin.png" class="social-icon"
                     alt="linkedin"></a>
         </div>
         <img src="/assets/images/cloud-md.png" class="nuvems nuvem-sm" alt="nuvem nuvem-sm">
         <img src="/assets/images/cloud-md.png" class="nuvems nuvem-md" alt="nuvem nuvem-md">
         <img src="/assets/images/cloud-lg.png" class="nuvems nuvem-lg" alt="nuvem nuvem-lg">
+        <fa-icon [icon]="icons['chevronDown']" class="arrow-down" (click)="goToNextSlide(1)"></fa-icon>
     </div>
 </div>
