--- a/src/app/pages/home/components/first-banner/first-banner.component.scss
+++ b/src/app/pages/home/components/first-banner/first-banner.component.scss
@@ -110,3 +110,20 @@
     }
   }
 }
+
+@keyframes MoveUpDown {
+  0%, 100% {
+    bottom: 0;
+  }
+  50% {
+    bottom: 10px;
+  }
+}
+
+.arrow-down {
+  animation: MoveUpDown 1s linear infinite;
+  position: absolute;
+  bottom: 1rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
