--- a/src/app/pages/home/components/second-banner/second-banner.component.html
+++ b/src/app/pages/home/components/second-banner/second-banner.component.html
@@ -13,5 +13,6 @@
             <span class="subtitle-box">ao nosso universo particular</span>
         </h2>
         <img src="/assets/images/logo-santo-job-centralizado.png" class="logo-img" alt="logo santo job">
+        <fa-icon [icon]="icons['chevronDown']" class="arrow-down" (click)="goToNextSlide(2)"></fa-icon>
     </div>
 </div>
