fix(sponsors): corrigindo tamanhos das logos dos sponsors

--- a/src/app/pages/home/components/sponsors/sponsors.component.html
+++ b/src/app/pages/home/components/sponsors/sponsors.component.html
@@ -20,13 +20,13 @@
         spaceBetween: 50
       }
     }" class="sponsors-carousel">
-      <ng-template swiperSlide><img class="sponsors-item" src="/assets/images/partner-01.png" alt="Mac Donald">
+      <ng-template swiperSlide><img class="sponsors-item swiper-slide" src="/assets/images/partner-01.png" alt="Mac Donald">
       </ng-template>
-      <ng-template swiperSlide><img class="sponsors-item" src="/assets/images/partner-02.png" alt="Oi"></ng-template>
-      <ng-template swiperSlide><img class="sponsors-item" src="/assets/images/partner-03.png" alt="Ambev"></ng-template>
-      <ng-template swiperSlide><img class="sponsors-item" src="/assets/images/partner-04.png" alt="Brahma">
+      <ng-template swiperSlide><img class="sponsors-item swiper-slide" src="/assets/images/partner-02.png" alt="Oi"></ng-template>
+      <ng-template swiperSlide><img class="sponsors-item swiper-slide" src="/assets/images/partner-03.png" alt="Ambev"></ng-template>
+      <ng-template swiperSlide><img class="sponsors-item swiper-slide" src="/assets/images/partner-04.png" alt="Brahma">
       </ng-template>
-      <ng-template swiperSlide><img class="sponsors-item" src="/assets/images/partner-05.png" alt="Budweiser">
+      <ng-template swiperSlide><img class="sponsors-item swiper-slide" src="/assets/images/partner-05.png" alt="Budweiser">
       </ng-template>
     </swiper>
   </div>
