--- a/src/app/pages/home/components/what-do-we-do/what-do-we-do.component.html
+++ b/src/app/pages/home/components/what-do-we-do/what-do-we-do.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="view === 'default'">
-    <div class="container container-what-do-we-do">
+    <div class="container container-what-do-we-do" *ngIf="servicesList">
         <h2 class="main-title">O que fazemos?</h2>
         <div class="main-content-section">
             <ul class="services-list flex flex-wrap -mx-2 overflow-hidden sm:-mx-3 md:-mx-3 lg:-mx-3 xl:-mx-3">
                 <li class="services-item my-2 px-2 w-1/2 sm:my-3 sm:px-3 sm:w-1/3 md:my-2 md:px-3 md:w-1/4 lg:my-3 lg:px-3 lg:w-1/4 xl:my-3 xl:px-6 xl:w-1/6"
                     *ngFor="let service of servicesList">
                     <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
-                        <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
+                        <img [attr.src]="service.icon" alt="icone de publicidade" class="services-item-image">
                         <span class='services-item-text'>{{service.name}}</span>
                     </a>
                 </li>
@@ -16,14 +16,14 @@
 </ng-container>
 
 <ng-container *ngIf="view === 'page-1'">
-    <div class="container container-what-do-we-do page-1">
+    <div class="container container-what-do-we-do page-1" *ngIf="servicesList">
         <h2 class="main-title">O que fazemos?</h2>
         <div class="main-content-section">
             <ul class="services-list flex flex-wrap -mx-2 overflow-hidden sm:-mx-3 md:-mx-3 lg:-mx-3 xl:-mx-3">
                 <li class="services-item my-2 px-2 w-1/2 sm:my-3 sm:px-3 sm:w-1/3 md:my-3 md:px-3 md:w-1/3 lg:my-3 lg:px-3 lg:w-1/4 xl:my-3 xl:px-3 xl:w-1/6"
                     *ngFor="let service of servicesList | slice:0:6">
                     <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
-                        <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
+                        <img [attr.src]="service.icon" alt="icone de publicidade" class="services-item-image">
                         <span class='services-item-text'>{{service.name}}</span>
                     </a>
                 </li>
@@ -34,14 +34,14 @@
 </ng-container>
 
 <ng-container *ngIf="view === 'page-2'">
-    <div class="container container-what-do-we-do">
+    <div class="container container-what-do-we-do" *ngIf="servicesList">
         <h2 class="main-title">O que fazemos?</h2>
         <div class="main-content-section">
             <ul class="services-list flex flex-wrap -mx-2 overflow-hidden sm:-mx-3 md:-mx-3 lg:-mx-3 xl:-mx-3">
                 <li class="services-item my-2 px-2 w-1/2 sm:my-3 sm:px-3 sm:w-1/3 md:my-3 md:px-3 md:w-1/3 lg:my-3 lg:px-3 lg:w-1/4 xl:my-3 xl:px-3 xl:w-1/6"
                     *ngFor="let service of servicesList | slice:6:12">
                     <a [routerLink]="[service.link]" routerLinkActive="router-link-active" class="services-item-link">
-                        <img [attr.src]="service.img" alt="icone de publicidade" class="services-item-image">
+                        <img [attr.src]="service.icon" alt="icone de publicidade" class="services-item-image">
                         <span class='services-item-text'>{{service.name}}</span>
                     </a>
                 </li>
