--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -1,42 +1,45 @@
 <header app-header></header>
-<main>
-  <div class="container-services lg:h-full">
-    <div class="services-header">
-      <div class="container px-4 py-8 lg:p-0 lg:h-full">
-        <div class="flex lg:px-8 lg:mx-auto flex-col-reverse lg:flex-row lg:h-full justify-between items-center gap-6 lg:gap-0">
-          <div class="flex flex-col lg:flex-row lg:h-full items-center">
-            <img src="/assets/images/icons/logo-oi.png" alt="Logo da Oi" class="w-3/4 lg:w-auto lg:h-full py-4">
-            <div class="services-header-title flex flex-col text-center lg:text-left">
-              <h1 class="futura-book-bold text-xl lg:text-3xl">{{serviceItem?.name}}</h1>
-              <h2 class="futura-book-bt text-lg lg:text-xl">Exagero de Giga Tasty por Tirullipa em suas redes sociais</h2>
+<a class="block md:hidden w-full" routerLink="/" fragment="o-que-fazemos">
+  <fa-icon [icon]="icons['arrowLeft']" alt="botão voltar" class="back-icon"></fa-icon>
+</a>
+<swiper [pagination]="{
+      type: 'fraction'
+    }" [navigation]="true" class="services-horizontal-carousel">
+  <ng-template swiperSlide *ngFor="let item of serviceItem.dataServicePage">
+    <main>
+      <div class="container-services lg:h-full">
+        <div class="services-header">
+          <div class="container px-4 pt-20 pb-8 md:py-8 lg:p-0 lg:h-full">
+            <div
+              class="flex lg:px-8 lg:mx-auto flex-col-reverse lg:flex-row lg:h-full justify-between items-center gap-6 lg:gap-0">
+              <div class="flex flex-col lg:flex-row lg:h-full items-center">
+                <img [attr.src]="item.logo" alt="Logo da Oi" class="w-3/4 lg:w-auto lg:h-full py-4">
+                <div class="services-header-title flex flex-col text-center lg:text-left">
+                  <h1 class="futura-book-bold text-xl lg:text-3xl">{{serviceItem?.name}}</h1>
+                  <h2 class="futura-book-bt text-lg lg:text-xl">{{item.subtitle}}</h2>
+                </div>
+              </div>
+              <a class="back-btn h-6 lg:h-10 hidden md:block" routerLink="/" fragment="o-que-fazemos">voltar</a>
             </div>
           </div>
-          <a class="back-btn h-6 lg:h-10 hidden md:block" routerLink="/" fragment="o-que-fazemos">voltar</a>
-          <a class="block md:hidden w-full" routerLink="/" fragment="o-que-fazemos"><fa-icon [icon]="icons['arrowLeft']" alt="botão voltar" class="back-icon"></fa-icon></a>
+        </div>
+        <div class="services-content h-2/3">
+          <div class="container lg:h-full flex flex-col lg:flex-row">
+            <div class="w-full lg:w-3/5 lg:px-8 lg:h-full flex flex-col justify-evenly gap-16 lg:gap-8">
+              <p class="services-content-text futura-book-bold w-full text-sm lg:text-sm" [innerText]="item.mainText">
+              </p>
+              <button class="services-content-button mx-auto lg:ml-0 w-4/5 lg:w-1/2 invisible lg:visible"
+                (click)="goToFooter()">Solicitar orçamento</button>
+            </div>
+            <div class='card-section lg:w-2/5 flex flex-col gap-8 lg:gap-0'>
+              <section app-cards-carousel [imagesList]="item.imagesList"></section>
+              <button class="services-content-button mx-auto lg:ml-0 w-4/5 lg:w-1/2 lg:hidden"
+                (click)="goToFooter()">Solicitar orçamento</button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="services-content h-2/3">
-      <div class="container lg:h-full flex flex-col lg:flex-row">
-        <div class="w-full lg:w-3/5 lg:px-8 lg:h-full flex flex-col justify-evenly gap-16 lg:gap-8">
-          <p class="services-content-text futura-book-bold w-full text-sm lg:text-sm">Lorem ipsum dolor sit amet, consectetuer
-            adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut
-            wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
-            commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
-            vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
-            praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,
-            cons
-            ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-            volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-            aliquip ex ea commodo conse</p>
-          <button class="services-content-button mx-auto lg:ml-0 w-4/5 lg:w-1/2 invisible lg:visible" (click)="goToFooter()">Solicitar orçamento</button>
-        </div>
-        <div class='card-section lg:w-2/5 flex flex-col gap-8 lg:gap-0'>
-          <section app-cards-carousel [imagesList]="serviceItem.imagesList"></section>
-          <button class="services-content-button mx-auto lg:ml-0 w-4/5 lg:w-1/2 lg:hidden" (click)="goToFooter()">Solicitar orçamento</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
+    </main>
+  </ng-template>
+</swiper>
 <footer id="footer" app-footer></footer>
