fix(footer): altura do footer na tela de servico

--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -42,4 +42,4 @@
     </main>
   </ng-template>
 </swiper>
-<footer id="footer" app-footer></footer>
+<footer id="footer" class="footer-service" app-footer></footer>
