fix(curiosity): corrigindo posicionamento dos elementos

--- a/src/app/pages/home/components/curiosity/curiosity.component.html
+++ b/src/app/pages/home/components/curiosity/curiosity.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="view === 'default'">
   <div class="curiosity-container">
     <div class="bg flex-col items-end">
-      <div class='w-1/2 items-end'>
+      <div class='w-1/2 md:w-3/5 lg:1/2 items-end'>
         <div class="title-section">
           <span class='title-one'>
             <h2 class="title-one-text">CURIOSIDADE
