--- a/src/app/pages/home/components/curiosity/curiosity.component.scss
+++ b/src/app/pages/home/components/curiosity/curiosity.component.scss
@@ -158,6 +158,11 @@
         top: 60%;
         right: -10%;
         width: 100px;
+        @media (min-width: $md) {
+          top: 15%;
+          left: 10%;
+          width: 260px;
+        }
 
         @media (min-width: $xl) {
           top: 20%;
