--- a/src/app/pages/services/services.component.scss
+++ b/src/app/pages/services/services.component.scss
@@ -104,7 +104,7 @@ footer.footer-service {
     @media (max-width: $sm) {
       top: 10%;
     }
-    @media (max-width: $lg) {
+    @media (min-width: $md) and (max-width: $lg) {
       top: 15%;
     }
     @media (min-width: $lg) {
