feat(services): criando tres layouts na tela de servicos

--- a/src/app/pages/services/components/cards-carousel/cards-carousel.component.scss
+++ b/src/app/pages/services/components/cards-carousel/cards-carousel.component.scss
@@ -6,6 +6,12 @@
 
   @media (min-width: $lg) {
     border-radius: 75px;
+
+    &.layout-3 {
+      border-radius: 0;
+      margin: 0 auto;
+      height: 100%;
+    }
   }
 
   .crop {
@@ -22,5 +28,19 @@
     width: 100%;
     height: auto;
     margin: -35px 0px -120px 0px;
+  }
+}
+
+.carousel-layout-2 {
+  @media (min-width: $lg) {
+
+    .swiper-button-prev,
+    .swiper-button-next {
+      color: black;
+    }
+
+    .swiper-button-prev {
+      left: 0;
+    }
   }
 }
