--- a/src/app/pages/services/components/cards-carousel/cards-carousel.component.html
+++ b/src/app/pages/services/components/cards-carousel/cards-carousel.component.html
@@ -1,5 +1,23 @@
-<div class="container-card max-w-sm rounded overflow-hidden shadow-lg">
-  <swiper [pagination]="true" class="mySwiper" [autoplay]="{
+<div class="container-card max-w-sm rounded overflow-hidden shadow-lg" *ngIf="layout === 1">
+  <swiper [pagination]="true" class="carousel-layout-1" [autoplay]="{
+    delay: 2500,
+    disableOnInteraction: false
+  }">
+    <ng-template swiperSlide *ngFor="let item of imagesList; let i = index"><img loading="lazy" class="w-full" [attr.src]="item" [attr.alt]="'imagem ' + i + 'do carrossel'"></ng-template>
+  </swiper>
+</div>
+
+<div class="container-card max-w-sm rounded overflow-hidden shadow-lg" *ngIf="layout === 2">
+  <swiper [pagination]="true" class="carousel-layout-1" [autoplay]="{
+    delay: 2500,
+    disableOnInteraction: false
+  }">
+    <ng-template swiperSlide *ngFor="let item of imagesList; let i = index"><img loading="lazy" class="w-full" [attr.src]="item" [attr.alt]="'imagem ' + i + 'do carrossel'"></ng-template>
+  </swiper>
+</div>
+
+<div class="container-card max-w-sm rounded overflow-hidden shadow-lg" *ngIf="layout === 3" [ngClass]="{'layout-3': layout === 3}">
+  <swiper [slidesPerView]="2" [spaceBetween]="30" [pagination]="true" class="carousel-layout-3" [autoplay]="{
     delay: 2500,
     disableOnInteraction: false
   }">
