--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -11,8 +11,8 @@
         <div class="services-header">
           <div class="container px-4 pt-20 pb-8 md:py-8 lg:p-0 lg:h-full">
             <div
-              class="flex lg:px-8 lg:mx-auto flex-col-reverse lg:flex-row lg:h-full justify-between items-center gap-6 lg:gap-0">
-              <div class="flex flex-col lg:flex-row lg:h-full items-center">
+              class="flex lg:px-8 lg:mx-auto flex-col-reverse lg:flex-row lg:h-full justify-between items-center gap-6 lg:gap-0" [ngClass]="{'lg:flex-row-reverse': serviceItem.layout === 3}">
+              <div class="flex flex-col lg:flex-row lg:h-full items-center" [ngClass]="{'lg:flex-row-reverse': serviceItem.layout === 3}">
                 <img loading="lazy" [attr.src]="item.logo" alt="Logo da Oi" class="w-3/4 lg:w-auto lg:h-full py-4">
                 <div class="services-header-title flex flex-col text-center lg:text-left">
                   <h1 class="futura-book-bold text-xl lg:text-3xl">{{serviceItem?.name}}</h1>
@@ -24,15 +24,15 @@
           </div>
         </div>
         <div class="services-content h-2/3">
-          <div class="container lg:h-full flex flex-col lg:flex-row">
+          <div class="container lg:h-full flex flex-col lg:flex-row" [ngClass]="{'lg:flex-row-reverse lg:justify-around': serviceItem.layout === 2}">
             <div class="w-full lg:w-3/5 lg:px-8 lg:h-full flex flex-col justify-evenly gap-16 lg:gap-8">
               <p class="services-content-text futura-book-bold w-full text-sm lg:text-sm" [innerText]="item.mainText">
               </p>
-              <button class="services-content-button mx-auto lg:ml-0 w-4/5 lg:w-1/2 invisible lg:visible"
+              <button class="services-content-button mx-auto lg:ml-0 w-4/5 lg:w-1/2 invisible lg:visible layout-{{serviceItem.layout}}'"
                 (click)="goToFooter()">Solicitar orçamento</button>
             </div>
-            <div class='card-section lg:w-2/5 flex flex-col gap-8 lg:gap-0'>
-              <section app-cards-carousel [imagesList]="item.imagesList"></section>
+            <div class='card-section lg:w-2/5 flex flex-col gap-8 lg:gap-0 layout-{{serviceItem.layout}}'>
+              <section app-cards-carousel [imagesList]="item.imagesList" [layout]="isMobile ? 1 : serviceItem.layout"></section>
               <button class="services-content-button mx-auto lg:ml-0 w-4/5 lg:w-1/2 lg:hidden"
                 (click)="goToFooter()">Solicitar orçamento</button>
             </div>
