--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -32,7 +32,7 @@
                 (click)="goToFooter()">Solicitar orçamento</button>
             </div>
             <div class='card-section lg:w-2/5 flex flex-col gap-8 lg:gap-0 layout-{{serviceItem.layout}}'>
-              <section app-cards-carousel [imagesList]="item.imagesList" [layout]="isMobile ? 1 : serviceItem.layout"></section>
+              <section app-cards-carousel [imagesList]="item.imagesList" [layout]="isMobile || isTablet ? 1 : serviceItem.layout"></section>
               <button class="services-content-button mx-auto lg:ml-0 w-4/5 lg:w-1/2 lg:hidden"
                 (click)="goToFooter()">Solicitar orçamento</button>
             </div>
